--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -48,14 +48,12 @@
   }
 
   &__block-foto-mini::-webkit-scrollbar { 
-    height: 4px;
-    //display: none;
-  } 
-  &__block-foto-mini::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    height: 6px;
+    width: 15%;
   } 
   &__block-foto-mini::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px rgb(7, 196, 127);
+    background-color: rgb(7, 196, 127);
+    border-radius: 50px;
   }
 
   &__block-foto-mini {
@@ -63,7 +61,6 @@
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
-    // height: 100%;
     scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
     scrollbar-width: thin;
     gap: 20px;
@@ -75,13 +72,6 @@
     }
   }
 
-  &__foto-tab :checked+.card__foto-radio {
-    // position: relative;
-    // padding-bottom: 74.5px;
-  
-    // border-bottom: 4px solid rgb(7, 196, 127);
-    // z-index: 100;
-  }
 
   &__foto-mini {
     cursor: pointer;
