--- a/styles/main.css
+++ b/styles/main.css
@@ -3475,17 +3475,13 @@ input {
 }
 
 .card__block-foto-mini::-webkit-scrollbar {
-  height: 4px;
-}
-
-.card__block-foto-mini::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  height: 6px;
+  width: 15%;
 }
 
 .card__block-foto-mini::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px #07c47f;
-          box-shadow: inset 0 0 6px #07c47f;
+  background-color: #07c47f;
+  border-radius: 50px;
 }
 
 .card__block-foto-mini {
