--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -20,7 +20,6 @@
 
   &__main {
     display: grid;
-    // grid-template-columns: 1fr 1fr;
     gap: 2rem;
     grid-template-areas:
       "foto description"
@@ -40,7 +39,7 @@
   }
 
   &__foto-main {
-    padding-bottom: 5rem;
+    margin-bottom: 5rem;
     height: 550px;
   }
 
