--- a/styles/components/_menu-modal.scss
+++ b/styles/components/_menu-modal.scss
@@ -18,7 +18,10 @@
         bottom: 0;
         z-index: -10;
         transition: all 0.5s ease 0s;
-        overflow: scroll;
+        overflow: auto;
+        &::-webkit-scrollbar { 
+           display: none;
+          } 
     }
 
     &__body {
