--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,7 @@
 @import "../styles/components/swiper";
 @import "../styles/components/accordion";
 @import "../styles/components/range-input";
+@import "../styles/components/range-input-modal";
 @import "../styles/components/custome-checkbox";
 @import "../styles/components/filter-modal";
 @import "../styles/components/header";
@@ -136,3 +137,5 @@
 // delivery page
 
 @import "../styles/components/paysystem";
+
+
