--- a/styles/components/_range-input-modal.scss
+++ b/styles/components/_range-input-modal.scss
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	gap: 3rem;
 
-	&__inputs {
+	&__inputs-modal {
 		position: relative;
 		width: 100%;
 		height: 100%;
@@ -56,13 +56,13 @@
 		}
 	}
 
-	&__values {
+	&__values-modal {
 		display: flex;
 		justify-content: space-between;
 		width: 100%;
 	}
 
-	&__value {
+	&__value-modal {
 		border: 1px solid #cfcfcf;
 		display: flex;
 		align-items: center;
@@ -72,15 +72,15 @@
 		width: 10rem;
 	}
 
-	&__value-from {
+	&__value-from-modal {
 		font-size: 1.6rem;
 	}
 
-	&__value-to {
+	&__value-to-modal {
 		font-size: 1.6rem;
 	}
 
-	&__track {
+	&__track-modal {
 		width: 100%;
 		height: 3px;
 		position: absolute;
