--- a/styles/components/_range-input-modal.scss
+++ b/styles/components/_range-input-modal.scss
@@ -13,12 +13,14 @@
 			-webkit-appearance: none;
 			-moz-appearance: none;
 			appearance: none;
-			width: 100%;
+			width: 95%;
 			outline: none;
 			position: absolute;
 			margin: auto;
 			top: 0;
+			left: -5px;
 			bottom: 0;
+			
 			background-color: transparent;
 			pointer-events: none;
 		}
@@ -48,6 +50,23 @@
 			pointer-events: auto;
 			margin-top: -4px;
 			pointer-events: auto;
+		}
+
+		input[type='range']::-moz-range-thumb {
+			-webkit-appearance: none;
+			height: 1em;
+			width: 1em;
+			background-color: #10ae73;
+			cursor: pointer;
+			border-radius: 50%;
+			pointer-events: auto;
+			margin-top: -4px;
+			pointer-events: auto;
+		}
+
+		input[type='range']:active::-moz-range-thumb {
+			background-color: #fff;
+			border: 1px solid #10ae73;
 		}
 
 		input[type='range']:active::-webkit-slider-thumb {
@@ -81,12 +100,13 @@
 	}
 
 	&__track-modal {
-		width: 100%;
+		width: 90%;
 		height: 3px;
 		position: absolute;
 		margin: auto;
 		top: 0;
 		bottom: 0;
+		left: 10px;
 		border-radius: 5px;
 	}
 }
