--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,6 +17,7 @@
 @import "../styles/components/accordion";
 @import "../styles/components/range-input";
 @import "../styles/components/range-input-modal";
+@import "../styles/components/loader";
 @import "../styles/components/custome-checkbox";
 @import "../styles/components/filter-modal";
 @import "../styles/components/header";
