--- a/styles/components/_search-result.scss
+++ b/styles/components/_search-result.scss
@@ -3,7 +3,8 @@
     z-index: 0;
     display: flex;
     opacity: 0;
-    transition: all 0.5s ease 0s;
+    transition: opacity 0.5s ease 0s;
+    transform: scale(0);
     flex-direction: column;
     gap: 1.5rem;
     width: 60rem;
