--- a/styles/components/_brands-all.scss
+++ b/styles/components/_brands-all.scss
@@ -68,7 +68,8 @@
     }
     &__country {
         font-size: 12px;
-        width: 7rem;
+        width: max-content;
+        padding: 0 1rem;
         height: 2.5rem;
         margin: 2rem 0;
         border-radius: 3rem;
