--- a/styles/components/_delivery.scss
+++ b/styles/components/_delivery.scss
@@ -9,6 +9,9 @@
         font-weight: bold;
         margin-bottom: 3rem;
     }
+    &__content {
+        margin-left: calc(30rem + 80px);
+    }
     &__list {
         margin-left: 20px;
         display: flex;
@@ -37,7 +40,9 @@
 
 @media screen and(max-width:1100px) {
     .delivery {
-        
+        &__content {
+            margin-left: 0;
+        }
     }
 }
 
