--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -23,7 +23,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        left: 22.7rem;
+        top: -25px;
+        left: -25px;
+        // left: 22.7rem;
         z-index: -1;
         border-bottom-left-radius: 2rem;
         border-bottom-right-radius: 2rem;
