--- a/styles/main.css
+++ b/styles/main.css
@@ -208,8 +208,12 @@ input {
   padding-left: 1rem;
 }
 
+main {
+  margin-top: 167px;
+}
+
 .container {
-  max-width: 1500px;
+  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -419,7 +423,8 @@ input {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  left: 22.7rem;
+  top: -25px;
+  left: -25px;
   z-index: -1;
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
@@ -648,7 +653,7 @@ input {
   font: caption;
   font-style: normal;
   font-weight: 700;
-  font-size: 1.6rem;
+  font-size: 2rem;
   line-height: 1.9rem;
   color: #161616;
 }
@@ -660,7 +665,7 @@ input {
 
 .site-nav__link_red {
   font-weight: 700;
-  font-size: 1.6rem;
+  font-size: 2rem;
   line-height: 1.9rem;
   color: red;
   margin-left: 1rem;
@@ -1490,6 +1495,11 @@ input {
 
 .header {
   border-bottom: 1px solid #c2c2c2;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 2;
+  background: white;
 }
 
 .header__burger {
@@ -1508,6 +1518,10 @@ input {
 
 .header__dropdown-btn .header__dropdown-icon-up {
   opacity: 0;
+}
+
+.header__dropdown-container {
+  position: relative;
 }
 
 .header__dropdown-icon-down {
@@ -1555,7 +1569,7 @@ input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 30rem;
+  gap: 20px;
 }
 
 .header__line {
@@ -1575,6 +1589,10 @@ input {
   gap: 14%;
 }
 
+.header__tel {
+  margin: 0 5.5rem;
+}
+
 @media screen and (max-width: 1100px) {
   .header {
     min-height: 9rem;
@@ -1585,7 +1603,7 @@ input {
   .header__top.open {
     display: -ms-grid;
     display: grid;
-        grid-template-areas: "logo icons" "search cancel";
+        grid-template-areas: "logo icons" "search cancel";
     row-gap: 4rem;
     padding: 2rem 0 4rem 0;
   }
@@ -2125,7 +2143,7 @@ input {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
+      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
   gap: 2.5rem;
 }
 
@@ -2265,13 +2283,13 @@ input {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
+        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
   }
   .products__right-columns {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
+        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
     gap: 1rem;
     border-radius: 2rem;
   }
@@ -3553,7 +3571,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 1rem;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .swiper-card__products.list {
@@ -3672,7 +3690,7 @@ input {
   .swiper-card__products {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-        grid-template-areas: 'img description' 'img  description' 'img  footer';
+        grid-template-areas: 'img description' 'img  description' 'img  footer';
     gap: 20px;
   }
   .swiper-card__price {
@@ -3734,7 +3752,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 2rem;
-      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
+      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
   margin-top: 2rem;
 }
 
@@ -4003,7 +4021,7 @@ input {
 
 @media screen and (max-width: 1100px) {
   .card__main {
-        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
+        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
   }
   .card__header-description {
     -ms-flex-pack: distribute;
@@ -6991,7 +7009,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 16px;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .favorite-product__img-block {
@@ -7227,7 +7245,7 @@ input {
   .favorite-product {
     border-bottom: 1px solid #d2d2d2;
     padding: 20px 0;
-        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
+        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
     -webkit-column-gap: 3rem;
             column-gap: 3rem;
   }
@@ -8271,7 +8289,7 @@ input {
     padding: 1.5rem;
   }
   .feedback__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .feedback__form input {
@@ -8542,7 +8560,7 @@ input {
     padding: 1.5rem;
   }
   .write-review__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .write-review__form input {
@@ -8733,7 +8751,10 @@ input {
 
 .brands-all__country {
   font-size: 12px;
-  width: 7rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 1rem;
   height: 2.5rem;
   margin: 2rem 0;
   border-radius: 3rem;
@@ -9344,40 +9365,6 @@ input {
   margin: 4.6rem 0 5rem 0;
 }
 
-.about .mobile-aside {
-  display: none;
-}
-
-.about .mobile-aside__link {
-  height: 55px;
-  font-size: 16px;
-  font-weight: bold;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0 21px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border: 2px solid #E8E8E8;
-  border-radius: 4px;
-}
-
-.about .mobile-aside__link span {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  -webkit-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-
-.about .mobile-aside__link--title {
-  cursor: pointer;
-  display: none;
-}
-
 .about__aside {
   width: 30rem;
   height: 31.5rem;
@@ -9475,6 +9462,40 @@ input {
   font-weight: bold;
 }
 
+.mobile-aside {
+  display: none;
+}
+
+.mobile-aside__link {
+  height: 55px;
+  font-size: 16px;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 21px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 2px solid #E8E8E8;
+  border-radius: 4px;
+}
+
+.mobile-aside__link span {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.mobile-aside__link--title {
+  cursor: pointer;
+  display: none;
+}
+
 @media screen and (max-width: 1100px) {
   .about__aside {
     display: none;
@@ -9502,10 +9523,10 @@ input {
     margin-bottom: 11rem;
     line-height: 4rem;
   }
-  .about .mobile-aside__link {
+  .mobile-aside__link {
     margin-bottom: 1rem;
   }
-  .about .mobile-aside__link--title {
+  .mobile-aside__link--title {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -9572,7 +9593,7 @@ input {
 .login-modal__content {
   z-index: 2900;
   display: none;
-      grid-template-areas: 'title title' 'label-email label-email' 'input-email input-email' 'label-pass remind' 'input-pass input-pass' 'btn-block btn-block';
+      grid-template-areas: 'title title' 'label-email label-email' 'input-email input-email' 'label-pass remind' 'input-pass input-pass' 'btn-block btn-block';
   position: relative;
   background: #fff;
   width: 480px;
@@ -10536,8 +10557,10 @@ input {
   display: -ms-flexbox;
   display: flex;
   opacity: 0;
-  -webkit-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
+  -webkit-transition: opacity 0.5s ease 0s;
+  transition: opacity 0.5s ease 0s;
+  -webkit-transform: scale(0);
+          transform: scale(0);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -11228,6 +11251,10 @@ input {
   margin-bottom: 3rem;
 }
 
+.delivery__content {
+  margin-left: calc(30rem + 80px);
+}
+
 .delivery__list {
   margin-left: 20px;
   display: -webkit-box;
@@ -11262,6 +11289,12 @@ input {
   font-weight: bold;
 }
 
+@media screen and (max-width: 1100px) {
+  .delivery__content {
+    margin-left: 0;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .delivery__title {
     font-size: 26px;
@@ -11294,6 +11327,10 @@ input {
   font-weight: bold;
   margin-bottom: 3rem;
   line-height: 4rem;
+}
+
+.paysystem__content {
+  margin-left: calc(30rem + 80px);
 }
 
 .paysystem__list {
@@ -11362,6 +11399,12 @@ input {
 
 .paysystem__body {
   padding: 0;
+}
+
+@media screen and (max-width: 1100px) {
+  .paysystem__content {
+    margin-left: 0;
+  }
 }
 
 @media screen and (max-width: 480px) {
