fix: fonts, margin

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -14,6 +14,7 @@
     position: relative;
     z-index: 2100;
     width: 14.5rem;
+    font-weight: normal;
 
     span {
       margin-right: 2rem;
